--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.label :details %>
   <%= f.text_field :details %>
   <%= f.label :completed %>
-  <%= f.text_field :completed, as: :boolean %>
+  <%= f.check_box :completed %>
   <%= f.submit %>
 <% end %>
 
