--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,6 +4,6 @@
 <p> <%= @task.details %> </p>
 <p> <%= @task.completed %> </p>
 
-<%= link_to " Edit Task", edit_path %>
-<%= link_to "+ Add New Task", new_path %>
+<%= link_to " Edit Task", edit_task_path %>
+
 <%= link_to " Back to list", tasks_path %>
